--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "del": "6.0.0",
     "gulp": "4.0.2",
     "gulp-htmlmin": "5.0.1",
-    "gulp-imagemin": "7.1.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "1.2.1",
-    "gulp-postcss": "9.0.0",
+    "gulp-postcss": ">=8.2.13",
     "gulp-rename": "2.0.0",
-    "gulp-sass": "4.1.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "7.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "4.0.1",
-    "postcss": "^8.3.0",
+    "postcss": "^8.4.13",
     "postcss-csso": "5.0.0",
     "stylelint": "13.8.0",
     "stylelint-config-htmlacademy": "0.1.4"
@@ -45,6 +45,10 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "14.15.0"
+    "node": "16.15.0"
+  },
+  "dependencies": {
+    "chokidar": "^3.5.3",
+    "sass": "^1.51.0"
   }
 }
